--- a/index.html
+++ b/index.html
@@ -49,29 +49,23 @@
     </header>
 
     <section class="news">
+        <div class="news__content">
         <div class="container">
             <div class="news__inner">
-                <div class="event">
-                    <div class="slider__items" id="items">
-                        <img src="./img/anons-1.jpg" alt="Анонсы мероприятий ИРПО" class="event__img">
-                        <div class="event__content">
-                            <div class="event__text">
-                                <p class="event__date">06.10.2021</p>
-                                <h1 class="event__title">Анонс мероприятия</h1>
-                            </div>
-                        </div>
-                    </div>
+                <div class="news__item">
+                    <img src="./img/anons-1.jpg" alt="" class="news__img">
                 </div>
-                <div class="event__side">
-                    <div class="event__side--item">
-                        <img src="./img/side-1.jpg" alt="" class="side__img">
+                <div class="news__side">
+                    <div class="news__side--item">
+                        <img src="./img/side-1.png" alt="" class="side__img">
                     </div>
-                    <div class="event__side--item">
+                    <div class="news__side--item">
                         <img src="./img/side-2.png" alt="" class="side__img">
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </section>
 
     <section class="programms">
