--- a/index.html
+++ b/index.html
@@ -48,19 +48,78 @@
         </div>
     </header>
 
+    <section class="nav">
+        <div class="container">
+            <div class="nav__inner">
+                <ul class="menu__list--nav">
+                    <li class="menu__item">
+                        <a href="#" class="menu__link--nav">Образовательная организации</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link--nav">Контакты</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link--nav">Помощь</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link--nav">н.тел +7(914)-29-29-452</a>
+                    </li>
+                </ul>
+                <a href="#" class="hamburger--nav" id="openOverley">
+                    <span class="hamburger__plank"></span>
+                    <span class="hamburger__plank"></span>
+                    <span class="hamburger__plank"></span>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <section class="news">
         <div class="news__content">
         <div class="container">
             <div class="news__inner">
                 <div class="news__item">
                     <img src="./img/anons-1.jpg" alt="" class="news__img">
+                    <div class="news__item--content">
+                        <div class="news__paginator">
+                            <div class="paginator__up">
+                                <img src="./img/upload.png" alt="" class="paginator__icon">
+                            </div>
+                            <ul class="paginator__list">
+                                <li class="paginator__item"></li>
+                                <li class="paginator__item"></li>
+                                <li class="paginator__item"></li>
+                                <li class="paginator__item"></li>
+                                <li class="paginator__item"></li>
+                            </ul>
+                            <div class="paginator__down">
+                                <img src="./img/arrow-down-sign-to-navigate.png" alt="" class="paginator__icon">
+                            </div>
+                        </div>
+                        <div class="news__text">
+                            <div class="news__text--content">
+                            <p class="news__date">07.10.2021</p>
+                            <h1 class="news__title">Анонс иероприятия</h1>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="news__side">
                     <div class="news__side--item">
-                        <img src="./img/side-1.png" alt="" class="side__img">
+                        <div class="news__side--content">
+                            <p class="news__side--text">Образовательные услуги и курсы</p>
+                            <div class="news__side--button">
+                            <a href="#" class="button">Подробнее</a>
+                        </div>
+                        </div>
                     </div>
                     <div class="news__side--item">
-                        <img src="./img/side-2.png" alt="" class="side__img">
+                        <img src="./img/side-2.jpg" alt="" class="side__img">
+                        <div class="news__side--content">
+                            <p class="news__side--text">Платные услуги</p>
+                            <div class="news__side--button">
+                            <a href="#" class="button">Подробнее</a>
+                        </div>
                     </div>
                 </div>
             </div>
