--- a/index.html
+++ b/index.html
@@ -65,11 +65,6 @@
                         <a href="#" class="menu__link--nav">н.тел +7(914)-29-29-452</a>
                     </li>
                 </ul>
-                <a href="#" class="hamburger--nav" id="openOverley">
-                    <span class="hamburger__plank"></span>
-                    <span class="hamburger__plank"></span>
-                    <span class="hamburger__plank"></span>
-                </a>
             </div>
         </div>
     </section>
@@ -313,6 +308,38 @@
     </section>
 
 
+    <div class="overley" id="overleyActive">
+        <div class="overley__close" id="overleyClose">
+            <img src="./img/close.png" alt="" class="close__icon">
+        </div>
+        <ul class="menu__list--overley">
+            <li class="menu__item--overley">
+                <a href="#" class="menu__link--overley">Абитуриентам</a>
+            </li>
+            <li class="menu__item--overley">
+                <a href="#" class="menu__link--overley">Студентам</a>
+            </li>
+            <li class="menu__item--overley">
+                <a href="#" class="menu__link--overley">Педагогам</a>
+            </li>
+            <li class="menu__item--overley">
+                <a href="#" class="menu__link--overley">Работодателям</a>
+            </li>
+        </ul>
+        <ul class="menu__list--overley">
+            <li class="menu__item--overley">
+                <a href="#" class="menu__link--overley">Образовательная организации</a>
+            </li>
+            <li class="menu__item--overley">
+                <a href="#" class="menu__link--overley">Контакты</a>
+            </li>
+            <li class="menu__item--overley">
+                <a href="#" class="menu__link--overley">Помощь</a>
+            </li>
+        </ul>
+    </div>
+
+    <script src="./overley.js"></script>
 </body>
 
 </html>
